--- a/source/stylesheets/main.css.sass
+++ b/source/stylesheets/main.css.sass
@@ -21,6 +21,9 @@
 @import stylesheets/coc.sass
 
 
+html, body
+  overflow-x: hidden
+
 body
   background-color: $red
   color: $cream
